force-app/main/default/objects/Module__c/fields/Estate__c.field-meta.xml
<CustomField>
    <fullName>Estate__c</fullName>
    <label>Estate</label>
    <referenceTo>Estate__c</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>