force-app/main/default/objects/Module__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>